--- a/AdventOfCode2018/AdventOfCode2018.fsproj
+++ b/AdventOfCode2018/AdventOfCode2018.fsproj
@@ -47,9 +47,11 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Parsing.fs" />
     <Compile Include="One.fs" />
     <Compile Include="Two.fs" />
     <Compile Include="Three.fs" />
+    <Compile Include="Four.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
