--- a/AdventOfCode2018/AdventOfCode2018.fsproj
+++ b/AdventOfCode2018/AdventOfCode2018.fsproj
@@ -54,6 +54,7 @@
     <Compile Include="Four.fs" />
     <Compile Include="Five.fs" />
     <Compile Include="Six.fs" />
+    <Compile Include="Seven.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
