--- a/AdventOfCode2018/AdventOfCode2018.fsproj
+++ b/AdventOfCode2018/AdventOfCode2018.fsproj
@@ -55,6 +55,7 @@
     <Compile Include="Five.fs" />
     <Compile Include="Six.fs" />
     <Compile Include="Seven.fs" />
+    <Compile Include="Eight.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
