Cleanup of Day 10.

--- a/AdventOfCode2018/AdventOfCode2018.fsproj
+++ b/AdventOfCode2018/AdventOfCode2018.fsproj
@@ -57,6 +57,7 @@
     <Compile Include="Seven.fs" />
     <Compile Include="Eight.fs" />
     <Compile Include="Nine.fs" />
+    <Compile Include="Ten.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
