--- a/AdventOfCode2018/AdventOfCode2018.fsproj
+++ b/AdventOfCode2018/AdventOfCode2018.fsproj
@@ -59,6 +59,7 @@
     <Compile Include="Nine.fs" />
     <Compile Include="Ten.fs" />
     <Compile Include="Eleven.fs" />
+    <Compile Include="Twelve.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
@@ -74,6 +75,7 @@
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.2.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Memory, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.ValueTuple">
       <Private>True</Private>
