--- a/AofC2018/AofC2018.fsproj
+++ b/AofC2018/AofC2018.fsproj
@@ -24,6 +24,7 @@
     <Compile Include="Fifteen.fs" />
     <Compile Include="Sixteen.fs" />
     <Compile Include="Seventeen.fs" />
+    <Compile Include="Eighteen.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
