--- a/AofC2018/AofC2018.fsproj
+++ b/AofC2018/AofC2018.fsproj
@@ -25,6 +25,7 @@
     <Compile Include="Sixteen.fs" />
     <Compile Include="Seventeen.fs" />
     <Compile Include="Eighteen.fs" />
+    <Compile Include="Nineteen.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
